you can now do OR for fallback attribute values. also replaced \** with \ per scala.xml

--- a/notes/0.2.markdown
+++ b/notes/0.2.markdown
@@ -15,5 +15,10 @@ You can Snakk beans now
   
     @Test def test11 = expect("Ann" :: "George" :: Nil) { school \ "classes" \ "students[age==7]" \@ "name" }
 
-You can use recursive matching \** or "**/"
+You can use recursive matching \\ or "**/"
 
+You can use OR to default attributes:
+
+    val someone:String = (school \ "classes" \ "students[age==7]" \@@ "name") OR ("nobody")
+
+   
