--- a/notes/0.4.3.markdown
+++ b/notes/0.4.3.markdown
@@ -1,4 +1,4 @@
-used Snakked for wiki surfing at [RacerKidz.com](http://www.racerkidz.com) - needed some minor updates
+used Snakked for wiki surfing at [RacerKidz.com](http://www.dieselapps.com) - needed some minor updates
 
 minor cleanups 
 
